refactored servletOptionsets, SelectCarOption

--- a/car.properties
+++ b/car.properties
@@ -8,4 +8,6 @@ Option1Value2=Automatic
 Option1Value2price=0
 Option2=Brakes
 Option2Value1=Regular
+Option2Value1price=0
 Option2Value2=ABS
+Option2Value2price=400
