--- a/SQL.properties
+++ b/SQL.properties
@@ -7,3 +7,12 @@ DROP_TABLES=DROP TABLE IF EXISTS Options, Optionsets, Automobiles
 ADD_AUTOMOBILE=INSERT INTO Automobiles (maker, model, baseprice) VALUES (?, ?, ?)
 ADD_OPTIONSET=INSERT INTO Optionsets (auto_id, set_name) VALUES (?, ?)
 ADD_OPTION=INSERT INTO Options (set_id, option_name, option_price) VALUES (?, ?, ?)
+
+UPDATE_AUTOMOBILE=UPDATE Automobiles SET maker=?, model=?, baseprice=? WHERE auto_id=?
+
+FIND_AUTOMOBILE=SELECT auto_id FROM Automobiles WHERE maker=? AND model=? AND baseprice=?
+FIND_OPTIONSET=SELECT set_id FROM Optionsets WHERE auto_id=?
+
+DELETE_OPTIONS=DELETE FROM Options WHERE set_id=?
+DELETE_OPTIONSETS=DELETE FROM Optionsets WHERE auto_id=?
+DELETE_AUTOMOBILE=DELETE FROM Automobiles WHERE auto_id=?
